--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	    <a class="twitter-share-button"
   			href="https://twitter.com/intent/tweet?text=Go%20Vegan&hashtags=BakraLivesMatter,BanAnimalSacrifice"
   			data-size="large">
-					Use Tweet 1</a>
+					Tweet Bakra Lives matter </a>
 		</br>
 	     <a class="twitter-share-button"
   			href="https://twitter.com/intent/tweet?text=Go%20Vegan%202&hashtags=BakraLivesMatter,BanAnimalSacrifice"
   			data-size="large">
-					Use Tweet 2</a>		
+					Tweet stop animal sacrifice </a>		
 	</body>
 
 </html>
